5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1644_2443.log
== TEST (2019-04-04 21:24:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))

if(op == 1):
	vol = pi * a**3 * (3*r-a)/3
if(op = 2):
	vol = 4*pi*r**3/3
	
print(round(vol,4))	
-- ERROR:
File "XXXX", line 17
    if(op = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:24:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))

if(op == 1):
	vol = pi * a**3 * (3*r-a)/3
if(op == 2):
	vol = 4*pi*r**3/3
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))

if(op == 1):
	vol = pi * a**3 * (3*r-a)/3
if(op == 2):
	vol = 4*pi*r**3 /3
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:25:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))

if(op == 1):
	vol = pi/3 * a**3 * (3*r-a)
if(op == 2):
	vol = 4/3 *pi*r**3 
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:26:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))

if(op == 1):
	vol = pi/3 * a**3 * (3*r-a)
if(op == 2):
	vol = 4/3 *pi*r**3 
	
print(round(vol,4))	
-- EXECUTION TIME:
0.131201
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
8.5744
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:27:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi/3 * a**3 * (3*r-a)

if(op == 1):
	vol = calota
if(op == 2):
	vol = 4/3 *pi*r**3 
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:27:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi/3 * a**3 * (3*r-a)

if(op == 1):
	vol = calota
if(op == 2):
	vol = 4/3 *pi*r**3 - calota 
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:27:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi/3 * a**3 * (3*r-a)

if(op == 1):
	vol = calota
else:
	vol = 4/3 *pi*r**3 - calota 
	
print(round(vol,4))	
-- EXECUTION TIME:
0.184788
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
8.5744
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
284.3413
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:28:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * a**3 * (3*r-a)/3

if(op == 1):
	vol = calota
else:
	vol = 4 *pi*r**3/3  
	
print(round(vol,4))	
-- OUTPUT:
8.5744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:30:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * a**2 * (3*r-a)/3

if(op == 1):
	vol = calota
if(op == 2)
	vol = 4 *pi*r**3/3  
	
print(round(vol,4))	
-- EXECUTION TIME:
0.140527
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 18
    if(op == 2)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:30:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
a = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * a**2 * (3*r-a)/3

if(op == 1):
	vol = calota
if(op == 2)
	vol = 4 *pi*r**3/3  
	
print(round(vol,4))	
-- EXECUTION TIME:
0.176359
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 18
    if(op == 2)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:31:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
x = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * x**2 * (3*r-x)/3

if(op == 1):
	vol = calota
if(op == 2)
	vol = 4 *pi*r**3/3  
	
print(round(vol,4))	
-- ERROR:
File "XXXX", line 18
    if(op == 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:31:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
x = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * x**2 * (3*r-x)/3

if(op == 1):
	vol = calota
if(op == 2):
	vol = 4 *pi*r**3/3  
	
print(round(vol,4))	
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:32:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
x = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * x**2 * (3*r-x)/3

if(op == 1):
	vol = calota
if(op == 2):
	vol = 4 *pi*r**3/3  - calota 
	
print(round(vol,4))	
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:33:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

#Entradas
r = float(input("Raio do tanque: "))
x = float(input("Altura da coluna de ar: "))

#Opcoes 

op = int(input("Qual a opcao desejada 1 ou 2? "))
calota = pi * x**2 * (3*r-x)/3

if(op == 1):
	vol = calota
if(op == 2):
	vol = 4 *pi*r**3/3  - calota 
	
print(round(vol,4))	
-- EXECUTION TIME:
0.237265
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
